--- a/Bleum.Web/h5.html
+++ b/Bleum.Web/h5.html
@@ -1,14 +1,12 @@
 <!DOCTYPE <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link href="css/style.css" rel="stylesheet">-->
-</head>
-
-<body>
+    <head>
+        <title></title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--<link href="css/style.css" rel="stylesheet">-->
+    </head>
+    <body>
     <header></header>
     <nav></nav>
     <article>
@@ -37,16 +35,17 @@
         <form onsubmit="return false" oninput="o.value=parseInt(a.value)+parseInt(b.value)">
             <input name="a" type="number">+
             <input name="b" type="number">=
-            <output name="o" />
+            <output name="o"/>
         </form>
     </aside>
     <footer></footer>
     <script>
-        var db = openDatabase("dbCustomer", "1.0", "Customer app", 2 * 1024 * 1024);
-        db.transaction(function (tx) {
-
+        var db = openDatabase("dbCustomer","1.0","Customer app",2*1024*1024);
+        debugger;
+        db.transaction(function(tx){
+            tx.executeSql('create table if not exists tblCust(id unique, customername');
+            tx.executeSql('insert into tblcust(id,customername) values(1,"shiv")');
         });
     </script>
-</body>
-
+    </body>
 </html>
